--- a/CPP_BASIC2/CPP_BASIC2.vcxproj.filters
+++ b/CPP_BASIC2/CPP_BASIC2.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CH07_pointer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Basic.md" />
