--- a/CPP_BASIC2/CPP_BASIC2.vcxproj
+++ b/CPP_BASIC2/CPP_BASIC2.vcxproj
@@ -127,6 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animals.cpp" />
+    <ClCompile Include="Arithmatic.cpp" />
+    <ClCompile Include="Atv.cpp" />
+    <ClCompile Include="Bike.cpp" />
     <ClCompile Include="CH01_variable.cpp" />
     <ClCompile Include="CH02_operation.cpp" />
     <ClCompile Include="CH03_statement.cpp" />
@@ -140,6 +144,7 @@
     <ClCompile Include="CH07_pointer.cpp" />
     <ClCompile Include="CH07_structure.cpp" />
     <ClCompile Include="CH08_dynamic.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="CH10_class.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -147,9 +152,14 @@
     <None Include="Basic.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animal.h" />
+    <ClInclude Include="Arithmatic.h" />
+    <ClInclude Include="Atv.h" />
+    <ClInclude Include="Bike.h" />
     <ClInclude Include="CH10_class.h" />
     <ClInclude Include="Io.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="Vehicle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
